--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.7",
+    "angular-recaptcha": "^4.2.0",
     "express": "^4.16.4"
   }
 }
